# custom-cloudcompare-plugins

qPCA/: CMakeLists.txt  info.json  qPCA.qrc
qPCA/include/: CMakeLists.txt  ccPCADlg.h  qPCA.h
qPCA/src/: ActionA.cpp  CMakeLists.txt  ccPCADlg.cpp  qPCA.cpp
qPCA/ui/: CMakeLists.txt  pcaDlg.ui
